--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
     "@stripe/stripe-js": "^1.23.0",
     "@types/next-auth": "^3.15.0",
     "axios": "^0.26.0",
     "faunadb": "^4.5.2",
     "next": "12.0.10",
     "next-auth": "^4.2.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.14",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.38",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
